python/testData/inspections/QualifyByImport.py
import QualifyByImportFoo

<caret><error descr="Unresolved reference 'foo'">foo</error> # must be qualified
